src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A26_2.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A26_2 {
  class A;
  class B;
  class C;
  class D;

  // creates namespaces: A.assoc1 and B.assoc1
  association assoc1 A -> B [1];

  // creates namespaces C.assoc1 and D.assoc1 -> namespaces are disjunct from the first association
  association assoc1 [1] C <-> D [1];
}
