src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A28.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A28 {
  class A;
  class B;
  class C ;
  class D extends B;
  class E extends B;

  // auto role: a
  association A <- B;

  association A (c) <-> B;
 
  // auto role: a
  association E -> A;

  // auto role: c
  association C <- D;

  association D <-> (a) C;
}
